// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuorumProgress matches the visual baseline, reached and short 1`] = `
{
  "attrs": {
    "class": "mt-4 pt-4 border-t border-[#1a2535]",
  },
  "children": [
    {
      "attrs": {
        "class": "flex justify-between text-sm mb-1",
      },
      "children": [
        {
          "attrs": {
            "class": "text-slate-400",
          },
          "children": [
            "Quorum",
          ],
          "tag": "span",
        },
        {
          "attrs": {
            "class": "text-amber-400",
          },
          "children": [
            "400,000 / 500,000 required",
          ],
          "tag": "span",
        },
      ],
      "tag": "div",
    },
    {
      "attrs": {
        "aria-label": "Quorum",
        "class": "h-2 bg-[#1a2535] rounded-full overflow-hidden",
        "role": "progressbar",
      },
      "children": [
        {
          "attrs": {
            "class": "h-full rounded-full transition-all bg-amber-500",
          },
          "children": [],
          "style": {
            "width": "80%",
          },
          "tag": "div",
        },
      ],
      "tag": "div",
    },
    {
      "attrs": {
        "class": "flex items-center gap-1 mt-2 text-xs text-amber-400",
      },
      "children": [
        {
          "attrs": {},
          "children": [
            "100,000 short of quorum",
          ],
          "tag": "span",
        },
      ],
      "tag": "div",
    },
  ],
  "tag": "div",
}
`;

exports[`QuorumProgress matches the visual baseline, reached and short 2`] = `
{
  "attrs": {
    "class": "mt-4 pt-4 border-t border-[#1a2535]",
  },
  "children": [
    {
      "attrs": {
        "class": "flex justify-between text-sm mb-1",
      },
      "children": [
        {
          "attrs": {
            "class": "text-slate-400",
          },
          "children": [
            "Quorum",
          ],
          "tag": "span",
        },
        {
          "attrs": {
            "class": "text-emerald-400",
          },
          "children": [
            "700,000 / 500,000 required",
          ],
          "tag": "span",
        },
      ],
      "tag": "div",
    },
    {
      "attrs": {
        "aria-label": "Quorum",
        "class": "h-2 bg-[#1a2535] rounded-full overflow-hidden",
        "role": "progressbar",
      },
      "children": [
        {
          "attrs": {
            "class": "h-full rounded-full transition-all bg-emerald-500",
          },
          "children": [],
          "style": {
            "width": "100%",
          },
          "tag": "div",
        },
      ],
      "tag": "div",
    },
    {
      "attrs": {
        "class": "flex items-center gap-1 mt-2 text-xs text-emerald-400",
      },
      "children": [
        {
          "attrs": {},
          "children": [],
          "tag": "svg",
        },
        {
          "attrs": {},
          "children": [
            "Quorum reached",
          ],
          "tag": "span",
        },
      ],
      "tag": "div",
    },
  ],
  "tag": "div",
}
`;
